excluding classes with test coverage violation from reporting, but added todo to keep them in mind