@@ -1,12 +1,14 @@
 package de.envite.bpm.camunda.migrator.processmetadata;
 
+import de.envite.bpm.camunda.migrator.meta.infrastructure.ExcludeFromJacocoGeneratedReport;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.camunda.bpm.engine.ProcessEngine;
 import org.camunda.bpm.engine.repository.ProcessDefinition;
 
 @RequiredArgsConstructor
+// TODO: Write Tests and remove Annotation
+@ExcludeFromJacocoGeneratedReport
 public class LoadProcessDefinitionKeysDefaultImpl implements LoadProcessDefinitionKeys {
 
   private final ProcessEngine processEngine;
@@ -21,6 +23,6 @@ public class LoadProcessDefinitionKeysDefaultImpl implements LoadProcessDefiniti
         .list()
         .stream()
         .map(ProcessDefinition::getKey)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
